# qModManager

./: .deepsource.toml  .editorconfig  .flake8  .gitattributes  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .readthedocs.yml  CHANGELOG  CHANGELOG.rst  Makefile  Pipfile  README.md  README.rst  TODO  appveyor.yml  codecov.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.py  run.spec  setup.cfg  setup.py  style.css
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/disabled/: codeql-analysis.yml
.github/scripts/: create_testenv.sh
.github/workflows/: build.yml  codeqa.yml  codeql-analysis.yml  lint.yml  precommit.yml  pythonapp.yml
doc/: _metadata.yaml.sample  metadata.md  usage.README.rst
docs/: api.rst  apidoc.sh  conf.py  global.rst.inc  index.rst  qmm.ab.archives.rst  qmm.ab.rst  qmm.ab.widgets.rst  qmm.bucket.rst  qmm.common.rst  qmm.config.rst  qmm.dialogs.rst  qmm.filehandler.rst  qmm.fileutils.rst  qmm.lang.rst  qmm.manager.rst  qmm.rst  qmm.settings.core_dialogs.rst  qmm.settings.pages.rst  qmm.settings.rst  qmm.settings.validators.rst  qmm.version.rst  qmm.widgets.rst  requirements.txt  usage.rst
docs/_ext/: ui_about.py  ui_customlist.py  ui_mainwindow.py  ui_qprogress.py  ui_settings.py
locales/fr_FR/LC_MESSAGES/: qmm.po
locales/zh/LC_MESSAGES/: qmm.po
qmm/: __init__.py  __main__.py  bucket.py  common.py  config.py  conflictbucket.py  dialogs.py  filehandler.py  fileutils.py  lang.py  manager.py  ui_customlist.py  version.py  widgets.py
qmm/ab/: __init__.py  archives.py  widgets.py
qmm/gamestruct/: __init__.py  liliththrone.py
qmm/resources/: icons.qrc  list-view.ui  ui_about.ui  ui_mainwindow.ui  ui_settings.ui
qmm/settings/: __init__.py  core_dialogs.py  pages.py  validators.py
resources/: README.txt  icons.qrc  qmodmanager.lnk  ui_about.ui  ui_customlist.ui  ui_mainwindow.ui  ui_qprogress.ui  ui_settings.ui
scripts/: update_copyright.pl
tests/: conftest.py  fixtures.py  test_gamestruct_validators.py  test_qmm.py
