[build-system]
requires = [  # PEP 508 specs
    "setuptools >= 40.9.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["qmm", "run.py"]
omit = [
    "*/tests/*",
    "docs/**"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]
fail_under = 0

[tool.pytest.ini_options]
testpaths = ['tests']
addopts = ""

[tool.black]
line-length = 98
target-version = ['py38']
#check = true

[tool.isort]
multi_line_output = 3
line_length = 98
known_third_party = ["pyqt5"]
include_trailing_comma = true
skip_glob = "tests/**,docs/**"
skip_gitignore = false
use_parentheses = true
