[metadata]
name = PyQmm
version = attr: qmm.version.VERSION_STRING
url = https://github.com/bicobus/qModManager/
author = bicobus
author_email = bicobus@keemail.me
description = A simple Qt based mod manager.
long_description = file: README.rst
license = EUPLv1.2
project_urls = 
    source = https://github.com/bicobus/qModManager/
    documentation = https://qmodmanager.readthedocs.io/

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires = 
    appdirs
    attrs
    pyqt5
    send2trash
    watchdog

[options.entry_points]
console_script =
    pyqmm = qmm.__main__:main

[options.packages.find]
exclude = 
    tests

[options.extras_require]
tests =
    pytest
    pytest-cov